[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Dice Sprites.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Orbitron-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sounds/Wind.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sprites/D8_Sprite.png" type="Texture" id=5]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.0879121, 0.835165, 1 )
colors = PoolColorArray( 0.72549, 0.392157, 0.270588, 0.294118, 0.627451, 0.568627, 0.282353, 0.294118, 0.984314, 0.733333, 0.678431, 0.294118, 1, 1, 1, 0.294118 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -200.0
initial_velocity_random = 0.75
orbit_velocity = 2.0
orbit_velocity_random = 0.5
angle = 120.0
angle_random = 0.75
scale = 0.25
scale_random = 0.5
color = Color( 0.984314, 0.733333, 0.678431, 0.188235 )
color_ramp = SubResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "Focus Line"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Line2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.03, 0.05, 0.06, 0.07 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 45.0, -70.0, 30.0, -20.0, 10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.290196, 0.478431, 0.588235, 1 ), Color( 0.788235, 0.454902, 0.364706, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
modulate = Color( 1.69, 1.88, 1.99, 1 )
z_index = 2
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Muzzle" type="Position2D" parent="Body"]
position = Vector2( 20, 0 )

[node name="Sprite" type="Sprite" parent="Body"]
modulate = Color( 0.290196, 0.478431, 0.588235, 1 )
position = Vector2( 4, 0 )
rotation = 4.71239
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 2 )
hframes = 6
vframes = 3
frame = 8

[node name="Line2D" type="Line2D" parent="Body"]
visible = false
modulate = Color( 1.3, 1.3, 1.4, 0.5 )
rotation = 0.785398
z_index = -1
points = PoolVector2Array( 20, 0, 1920, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 0.235294 )

[node name="BracedParticles" type="Particles2D" parent="Body"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( -10, 0 )
z_index = -1
emitting = false
process_material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="Trail_pos" type="Position2D" parent="Body"]
position = Vector2( -16, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 1.4, 1.4 )
polygon = PoolVector2Array( 4, -13, 20, 0, 4, 13, -12, 0 )

[node name="DiceFace" type="Label" parent="."]
visible = false
modulate = Color( 0.976471, 0.286275, 0.286275, 1 )
margin_left = -7.63195
margin_top = -10.9444
margin_right = 24.368
margin_bottom = 21.0556
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.6, 1.6 )
smoothing_enabled = true
smoothing_speed = 3.0

[node name="ShotCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Bounce" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bounce"]
polygon = PoolVector2Array( -18, 0, 6, -20, 30, 0, 6, 20 )

[node name="SOUNDS" type="Node" parent="."]

[node name="Shot" type="AudioStreamPlayer" parent="SOUNDS"]

[node name="Reload" type="AudioStreamPlayer" parent="SOUNDS"]

[node name="Charge" type="AudioStreamPlayer" parent="SOUNDS"]

[node name="Explode" type="AudioStreamPlayer" parent="SOUNDS"]

[node name="Wind" type="AudioStreamPlayer" parent="SOUNDS"]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Focus Line" = SubResource( 4 )

[connection signal="timeout" from="ShotCooldownTimer" to="." method="_on_ShotCooldownTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="body_entered" from="Bounce" to="." method="_on_Bounce_body_entered"]
